2005-02-21 04:42:34  Alain Bench  <messtic@oreka.com>  (roessler)

	* parse.c, pgp.c, sendlib.c: Bcc should be RFC2047-encoded, too.

2005-02-19 16:00:24  Thomas Roessler  <roessler@does-not-exist.org>  (roessler)

	* sendlib.c: Fix Debian 295528.

2005-02-17 03:33:00  Brendan Cully  <brendan@kublai.com>  (brendan)

	* OPS, browser.c, doc/manual.sgml.head, functions.h,
	imap/browse.c, imap/imap.c, imap/imap.h, imap/imap_private.h: New
	function: rename-mailbox (bound to 'r' by default).

	The lack of a rename-mailbox command for IMAP finally got too annoying.
	It's a bit of a cut-and-paste job, but I've put my dreams of cleaning
	up the IMAP codebase on hold. Gotta grow up some time.

2005-02-13 17:37:31  Roland Rosenfeld  <roland@spinnaker.de>  (roessler)

	* po/de.po: update

2005-02-13 09:53:07  Thomas Roessler  <roessler@does-not-exist.org>  (roessler)

	* Makefile.am: Include crypt-gpgme.h with the distribution.

2005-02-13 00:25:37  Brendan Cully  <brendan@kublai.com>  (brendan)

	* configure.in, m4/gettext.m4, m4/iconv.m4: Use AC_HELP_STRING to
	pretty print configure --help screen, with mixed results.

  2005-02-12 21:04:22  Brendan Cully  <brendan@kublai.com>  (brendan)
                                   
  	* Makefile.am, imap/Makefile.am: Require at least automake 1.6
2005-02-12 20:46:48  Vincent Lefevre  <vincent@vinc17.org>  (roessler)

	* po/fr.po: update

2005-02-12 20:45:36  Vsevolod Volkov  <vvv@mutt.org.ua>  (roessler)

	* po/ru.po: update

2005-02-12 20:20:42  Thomas Roessler  <roessler@does-not-exist.org>  (roessler)

	* configure.in: Give people more time to profile the inode
	sorting code; disabled by default for now.

	* globals.h, init.h, menu.c: Christoph Berg's menu_context,
	and a version of menu_move_off where that's not optional,
	but where mutt will just try to avoid moving off the bottom.
	Complain to mutt-dev if you want this to be optional.

2005-02-12 19:54:51  TAKAHASHI Tamotsu	<ttakah@lapis.plala.or.jp>  (brendan)
